tests/shouldFail/expression-ill_formed_function2.bc
//EXPECTED BEHAVIOUR:
//process has one action, but contains a function in the rate that is ill-formed
//we should get syntax errors and a graceful exit

//WHAT IT TESTS:
// -expression parser correctly detects ill-formed functions and throws the appropriate error

//test absolute value
proc1[] = {action2, min(1,2,(,))};

//system line
proc1[];

//>SyntaxError
